<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <TextView
        android:id="@+id/op1_label"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="5dp"
        android:text="@string/operand_1"
        app:layout_constraintBottom_toTopOf="@+id/op1_value"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_chainStyle="packed"
        tools:text="OPERAND 1" />

    <EditText
        android:id="@+id/op1_value"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="16dp"
        android:ems="10"
        android:hint="@string/op1_hint"
        android:importantForAutofill="no"
        android:inputType="numberDecimal|numberSigned"
        android:minHeight="48dp"
        app:layout_constraintBottom_toTopOf="@+id/op2_label"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/op1_label" />

    <TextView
        android:id="@+id/op2_label"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="184dp"
        android:text="@string/operand_2"
        app:layout_constraintBottom_toTopOf="@+id/op2_value"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/op1_value"
        tools:text="OPERAND 2" />

    <EditText
        android:id="@+id/op2_value"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="16dp"
        android:ems="10"
        android:hint="@string/op2_hint"
        android:importantForAutofill="no"
        android:inputType="numberDecimal|numberSigned"
        android:minHeight="48dp"
        app:layout_constraintBottom_toTopOf="@+id/result_label"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/op2_label" />

    <TextView
        android:id="@+id/result_label"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="180dp"
        android:text="@string/result_ext"
        android:textAlignment="center"
        android:textSize="20sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/result_text"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:text=""
        android:textAlignment="center"
        android:textSize="24sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/result_label"
        tools:text="234.5" />

    <Button
        android:id="@+id/addBtn"
        android:layout_width="115dp"
        android:layout_height="61dp"
        android:layout_marginTop="0dp"
        android:text="@string/addBtn_lbl"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.1"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/result_text" />

    <Button
        android:id="@+id/subtractBtn"
        android:layout_width="115dp"
        android:layout_height="61dp"
        android:layout_marginTop="0dp"
        android:text="@string/subtractBtn_lbl"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.9"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/result_text" />

    <Button
        android:id="@+id/multiplyBtn"
        android:layout_width="115dp"
        android:layout_height="61dp"
        android:layout_marginTop="62dp"
        android:text="@string/multiplyBtn_lbl"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.1"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/result_text" />

    <Button
        android:id="@+id/divideBtn"
        android:layout_width="115dp"
        android:layout_height="61dp"
        android:layout_marginTop="62dp"
        android:text="@string/divideBtn_lbl"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.9"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/result_text" />

    <Button
        android:id="@+id/percentBtn"
        android:layout_width="115dp"
        android:layout_height="61dp"
        android:layout_marginTop="123dp"
        android:text="@string/percentBtn_lbl"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.1"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/result_text" />

    <Button
        android:id="@+id/squareRootBtn"
        android:layout_width="115dp"
        android:layout_height="61dp"
        android:layout_marginTop="123dp"
        android:text="@string/squareRootBtn_lbl"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.9"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/result_text" />

</androidx.constraintlayout.widget.ConstraintLayout>